add autorefresh after save

--- a/popup.html
+++ b/popup.html
@@ -60,10 +60,10 @@
             background-color: var(--primary);
         }
 
-        p {
-            margin-top: 10px;
+        a {
             color: var(--accent);
-            font-size: 14px;
+            font-size: 12px;
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -114,7 +114,7 @@
         </select>
         <button id="saveButton">Save</button>
     </div>
-    <p>You need to manually refresh the page to see changes.</p>
+    <p><a href="https://github.com/phoenixthrush/Nekofy">Source Code</a></p>
     <script src="popup.js"></script>
 </body>
 
