add enable disable toggle

--- a/popup.html
+++ b/popup.html
@@ -30,7 +30,7 @@
 
         .container {
             display: flex;
-            align-items: center;
+            flex-direction: column;
             gap: 10px;
         }
 
@@ -112,7 +112,8 @@
                 <option value="blowjob">Blowjob</option>
             </optgroup>
         </select>
-        <button id="saveButton">Save</button>
+        <button id="saveButton">Save & Apply</button>
+        <button id="toggleButton">Enable Extension</button>
     </div>
     <p><a href="https://github.com/phoenixthrush/Nekofy">Source Code</a></p>
     <script src="popup.js"></script>
